
Finally got around to fixing the icon loader....
----------------------------------------------------------------------
Mon Feb 11 11:15:36 2002                        Michael Jennings (mej)

Fixed quoting in the configure script.
----------------------------------------------------------------------
Mon Feb 11 14:22:28 2002                        Michael Jennings (mej)

A few squirts of my trusty Cruft-B-Gone, and VOILA!  :-)
----------------------------------------------------------------------
Tue Feb 12 00:05:03 2002                        Michael Jennings (mej)

Build and install the latest libast from CVS, then try this again.
Sorry....
----------------------------------------------------------------------
Tue Feb 12 00:27:03 2002                        Michael Jennings (mej)

Ahem.  That was dumb.  Let's just undo that, shall we?
----------------------------------------------------------------------
Thu Feb 21 03:33:33 2002                            Ted Zlatanov (tzz)

Added crude performance tests.
----------------------------------------------------------------------
Thu Feb 21 09:33:00 2002                            Ted Zlatanov (tzz)

Applied patch from Tomohiro KUBOTA <tkubota@riken.go.jp> to use auto
locale encodings.  This is not too useful right now, but with the next
Eterm release it will be.  I couldn't test thoroughly since I don't
have multiple locales on my system, but what I did test looked fine.

I also fixed a CONFIG_BUFF constant missing from options.h
----------------------------------------------------------------------
Thu Feb 21 19:06:18 2002                        Michael Jennings (mej)

I think Ted made the right call for the wrong reason.  I'm adding the
fallback value for CONFIG_BUFF so that people using the older libast
will be able to use 0.9.2.  I'd like to get 0.9.2 out the door soon,
but libast 0.5 is far from ready. :-)
----------------------------------------------------------------------